--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -1,30 +1,34 @@
+--- 
 apiVersion: apps/v1
 kind: Deployment
-metadata:
-  name: surya-hello-world
-  labels:
+metadata: 
+  labels: 
     app: hello-world
-spec:
+  name: surya-hello-world
+spec: 
   replicas: 1
-  selector:
-    matchLabels:
+  selector: 
+    matchLabels: 
       app: jenkins
-  template:
-    metadata:
-      labels:
+  template: 
+    metadata: 
+      labels: 
         app: jenkins
-    spec:
+    spec: 
+      containers: 
+        - 
+          image: suryaobulareddy2932/hello-world
+          name: jenkins
+          ports: 
+            - 
+              containerPort: 8100
       hostNetwork: true
-      containers:
-      - name: jenkins
-        image: suryaobulareddy2932/hello-world
-        ports:
-        - containerPort: 8100
       restartPolicy: Always
-      securityContext:
-       fsGroup: 0
-       runAsUser: 0
-      volumes:
-       - name: jenkins
-         persistentVolumeClaim:
-          claimName: nfs-pvc-jenkins
+      securityContext: 
+        fsGroup: 0
+        runAsUser: 0
+      volumes: 
+        - 
+          name: jenkins
+          persistentVolumeClaim: 
+            claimName: nfs-pvc-jenkins
