--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,3 +29,22 @@ spec:
        - name: jenkins
          persistentVolumeClaim:
           claimName: nfs-pvc-jenkins
+---        
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-docker
+spec:
+  type: NodePort 
+  ports:
+    - port: 8080
+      targetPort: 8080
+      name: "http"
+      nodePort: 30000
+    - port: 50000
+      name: "slave"
+      nodePort: 30010
+      targetPort: 50000
+  selector:
+    app: jenkins-docker
+
