--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: hello-world
 spec:
-  replicas: 2
+  replicas: 10
   selector:
     matchLabels:
       app: jenkins
@@ -41,6 +41,10 @@ spec:
       targetPort: 8100
       name: "http"
       nodePort: 31000
+  type: LoadBalancer
+  externalIPs:
+    - 164.52.219.186
+      164.52.219.187
   selector:
     app: jenkins
 
