--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -6,10 +6,17 @@ metadata:
   labels:
     app: hello-world
 spec:
-  replicas: 10
+  replicas: 3
   selector:
     matchLabels:
       app: hello-world
+      environment: test
+  minReadySeconds: 10
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       labels:
