--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -27,7 +27,7 @@ spec:
         image: suryaobulareddy2932/hello-world:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 9100
+        - port: 8100
       restartPolicy: Always
       securityContext:
        fsGroup: 0
