--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -10,6 +10,8 @@ spec:
   selector:
     matchLabels:
       app: hello-world
+      tier: backend
+      track: stable
   minReadySeconds: 10
   strategy:
     rollingUpdate:
@@ -20,22 +22,18 @@ spec:
     metadata:
       labels:
         app: hello-world
+        tier: backend
+        track: stable
     spec:
       hostNetwork: true
       containers:
       - name: hello-world
         image: suryaobulareddy2932/hello-world:latest
         imagePullPolicy: Always
-#         ports:
-#         - containerPort: 9100
+        ports:
+        - containerPort: 9100
+          name: http
       restartPolicy: Always
-      securityContext:
-       fsGroup: 0
-       runAsUser: 0
-      volumes:
-       - name: hello-world
-         persistentVolumeClaim:
-          claimName: nfs-pvc-jenkins
 # ---        
 # apiVersion: v1
 # kind: Service
