--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -44,7 +44,8 @@ spec:
       targetPort: 8100
       name: "http"
       nodePort: 31000
-  type: LoadBalancer
+#   type: LoadBalancer
+  type: NodePort 
 #   externalIPs:
 #     - 164.52.219.186
 #     - 164.52.219.187
