--- a/hello-world.yaml
+++ b/hello-world.yaml
@@ -7,6 +7,7 @@ metadata:
     app: hello-world
 spec:
   replicas: 5
+#   hostNetwork: true  ## this will allow to run only one instance in a machine
   selector:
     matchLabels:
       app: hello-world
